Update for public repo

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -2,9 +2,6 @@ FROM node:carbon-alpine
 
 MAINTAINER cronic@zensystem.io
 
-ARG GITHUB_USER
-
-ARG GITHUB_PASS
 
 RUN apk add --no-cache git python build-base libsodium-dev boost-dev \
     && npm install -g mocha
@@ -12,7 +9,7 @@ RUN apk add --no-cache git python build-base libsodium-dev boost-dev \
 USER node
 
 RUN cd ~ \
-    && git clone https://$GITHUB_USER:$GITHUB_PASS@github.com/ZencashOfficial/equihashverify.git \
+    && git clone https://github.com/ZencashOfficial/equihashverify.git \
     && cd ./equihashverify \
     && npm install
 
